Change Best Practice to AI Agent in navigation and content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a href="#data-insights" data-en="Data Insights" data-cn="数据洞察">Data Insights</a>
                     </div>
                 </div>
-                <a href="#best-practice" class="nav-link" data-en="Best Practice" data-cn="最佳实践">Best Practice</a>
+                <a href="#ai-agent" class="nav-link" data-en="AI Agent" data-cn="AI代理">AI Agent</a>
                 <a href="#gemba-walk" class="nav-link" data-en="Gemba Walk" data-cn="现场走访">Gemba Walk</a>
                 <a href="#about-us" class="nav-link" data-en="About Us" data-cn="关于我们">About Us</a>
             </div>
@@ -122,27 +122,27 @@
         </div>
     </section>
 
-    <!-- Best Practice Section -->
-    <section id="best-practice" class="services">
+    <!-- AI Agent Section -->
+    <section id="ai-agent" class="services">
         <div class="container">
-            <h2 class="section-title" data-en="Best Practice" data-cn="最佳实践">Best Practice</h2>
+            <h2 class="section-title" data-en="AI Agent" data-cn="AI代理">AI Agent</h2>
             <div class="services-grid">
                 <div class="service-item">
-                    <h3 data-en="Operational Excellence" data-cn="运营卓越">Operational Excellence</h3>
-                    <p data-en="Proven methodologies and frameworks to achieve operational excellence in logistics and fulfillment processes." data-cn="经过验证的方法论和框架，在物流和履行流程中实现运营卓越。">
-                        Proven methodologies and frameworks to achieve operational excellence in logistics and fulfillment processes.
+                    <h3 data-en="Intelligent Automation" data-cn="智能自动化">Intelligent Automation</h3>
+                    <p data-en="AI-powered automation solutions that streamline logistics processes, reduce manual work, and improve operational efficiency through machine learning algorithms." data-cn="AI驱动的自动化解决方案，通过机器学习算法简化物流流程，减少手工作业，提高运营效率。">
+                        AI-powered automation solutions that streamline logistics processes, reduce manual work, and improve operational efficiency through machine learning algorithms.
                     </p>
                 </div>
                 <div class="service-item">
-                    <h3 data-en="Process Optimization" data-cn="流程优化">Process Optimization</h3>
-                    <p data-en="Best practices for continuous improvement and process optimization to enhance efficiency and reduce waste." data-cn="持续改进和流程优化的最佳实践，提高效率并减少浪费。">
-                        Best practices for continuous improvement and process optimization to enhance efficiency and reduce waste.
+                    <h3 data-en="Predictive Analytics" data-cn="预测分析">Predictive Analytics</h3>
+                    <p data-en="Advanced AI agents that analyze historical data patterns to predict demand, optimize inventory levels, and prevent potential operational issues before they occur." data-cn="先进的AI代理分析历史数据模式，预测需求，优化库存水平，并在潜在运营问题发生前预防。">
+                        Advanced AI agents that analyze historical data patterns to predict demand, optimize inventory levels, and prevent potential operational issues before they occur.
                     </p>
                 </div>
                 <div class="service-item">
-                    <h3 data-en="Quality Management" data-cn="质量管理">Quality Management</h3>
-                    <p data-en="Industry-leading quality management practices to ensure consistent service delivery and customer satisfaction." data-cn="行业领先的质量管理实践，确保一致的服务交付和客户满意度。">
-                        Industry-leading quality management practices to ensure consistent service delivery and customer satisfaction.
+                    <h3 data-en="Smart Decision Support" data-cn="智能决策支持">Smart Decision Support</h3>
+                    <p data-en="AI-driven decision support systems that provide real-time recommendations, optimize resource allocation, and enhance strategic planning capabilities." data-cn="AI驱动的决策支持系统，提供实时建议，优化资源配置，增强战略规划能力。">
+                        AI-driven decision support systems that provide real-time recommendations, optimize resource allocation, and enhance strategic planning capabilities.
                     </p>
                 </div>
             </div>
