Add demo mode indicators and Amazon Q integration guide

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="chat-header">
                 <div class="chat-title">
                     <div class="amazon-q-logo">Q</div>
-                    <span data-en="Amazon Q Assistant" data-cn="Amazon Q 助手">Amazon Q Assistant</span>
+                    <span data-en="Amazon Q Assistant (Demo)" data-cn="Amazon Q 助手 (演示版)">Amazon Q Assistant (Demo)</span>
                 </div>
                 <button id="chat-close" class="chat-close">×</button>
             </div>
@@ -229,8 +229,8 @@
                 <div class="chat-messages" id="chat-messages">
                     <div class="message bot-message">
                         <div class="message-content">
-                            <p data-en="👋 Hello! I'm Amazon Q, your AI assistant. How can I help you with FMS logistics today?" data-cn="👋 您好！我是Amazon Q，您的AI助手。今天我可以如何帮助您处理FMS物流问题？">
-                                👋 Hello! I'm Amazon Q, your AI assistant. How can I help you with FMS logistics today?
+                            <p data-en="👋 Hello! I'm Amazon Q Assistant (Demo Mode). I can help you with FMS logistics questions using pre-configured responses. For full AI capabilities, API integration is needed." data-cn="👋 您好！我是Amazon Q助手（演示模式）。我可以使用预配置的响应帮助您解答FMS物流问题。如需完整AI功能，需要API集成。">
+                                👋 Hello! I'm Amazon Q Assistant (Demo Mode). I can help you with FMS logistics questions using pre-configured responses. For full AI capabilities, API integration is needed.
                             </p>
                         </div>
                     </div>
