✨ 增强Amazon Q聊天功能 - 添加智能演示模式

--- a/index.html
+++ b/index.html
@@ -260,8 +260,13 @@
             // 应该使用AWS Cognito或其他安全的认证方式
             useDemo: true // 设置为false使用真实API，true使用演示模式
         };
+        
+        // 启用增强聊天功能
+        window.USE_ENHANCED_CHAT = true;
     </script>
 
+    <!-- 增强聊天配置 -->
+    <script src="enhanced-chat-config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
