🐛 修复中文回复和聊天滚动问题
✨ 新功能:
- 添加中文关键词支持 (物流、库存、配送等)
- 智能双语响应系统
- 滚动到底部按钮
- 平滑滚动动画
- 消息淡入效果

🔧 修复:
- 中文输入无响应问题
- 聊天窗口滚动体验
- 长对话可见性问题

--- a/index.html
+++ b/index.html
@@ -235,6 +235,16 @@
                         </div>
                     </div>
                 </div>
+                
+                <!-- Scroll to bottom button -->
+                <div class="scroll-to-bottom" id="scroll-to-bottom" style="display: none;">
+                    <button class="scroll-btn" title="Scroll to bottom">
+                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M7 14L12 19L17 14H7Z" fill="currentColor"/>
+                        </svg>
+                    </button>
+                </div>
+                
                 <div class="chat-input-container">
                     <input type="text" id="chat-input" data-en="Ask me anything about FMS logistics..." data-cn="询问我任何关于FMS物流的问题..." placeholder="Ask me anything about FMS logistics..." />
                     <button id="send-button" class="send-button">
