🆓 实施完全免费的增强版聊天机器人
✨ 新功能:
- 增强版AI级别的对话能力
- 智能上下文理解和学习
- 个性化用户体验
- 专业FMS物流知识库
- 中英文双语智能切换
- 用户偏好学习和记忆

💰 成本优化:
- 完全免费，无服务器费用
- 替代Amazon Q Business (节省-20/用户/月)
- 纯前端实现，无AWS服务依赖
- 无使用量限制

🔧 技术特性:
- 智能意图识别
- 上下文感知回复
- 学习型对话系统
- 本地存储用户偏好

--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
         window.USE_ENHANCED_CHAT = true;
     </script>
 
+    <!-- 增强版免费聊天机器人 -->
+    <script src="enhanced-free-chatbot.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
