🚀 升级到超级增强版AI聊天机器人
✨ 超级增强功能:
- 🧠 高级意图识别和多意图分析
- 🔍 智能实体识别 (数字、日期、位置、产品、指标)
- 😊 情感分析和情绪理解
- 🧩 上下文记忆和对话历史分析
- 👤 用户专业水平评估和个性化回复
- 💡 智能建议生成
- 🎨 动态回复风格调整

🎯 接近Amazon Q Business的功能:
- 深度物流知识库
- 预测分析能力
- 流程自动化建议
- 供应链优化指导
- 仓库自动化专业知识
- 最后一公里配送优化

💰 完全免费替代方案:
- 节省 $3-20/用户/月 的Amazon Q Business费用
- 无使用限制
- 完全自主控制

🎨 视觉增强:
- 超级AI指示器
- 渐变色彩主题
- 智能分析标签
- 增强动画效果

--- a/index.html
+++ b/index.html
@@ -273,10 +273,13 @@
         
         // 启用增强聊天功能
         window.USE_ENHANCED_CHAT = true;
+        window.USE_SUPER_ENHANCED_CHAT = true; // 启用超级增强版
     </script>
 
     <!-- 增强版免费聊天机器人 -->
     <script src="enhanced-free-chatbot.js"></script>
+    <!-- 超级增强版聊天机器人 -->
+    <script src="super-enhanced-chatbot.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
