🔧 修复聊天机器人 - 确保中文支持和智能回复
🐛 修复的问题:
- 修复语言检测bug (hasChanged -> hasChinese)
- 简化类继承结构，避免加载顺序问题
- 确保中文回复正常工作
- 优化错误处理和日志输出

✨ 功能特性:
- ✅ 完整的中英文双语支持
- ✅ 智能关键词匹配
- ✅ 专业FMS物流知识库
- ✅ 个性化回复生成
- ✅ 对话历史记录
- ✅ 详细的调试日志

🧪 测试用例:
- 中文问候: '你好', '您好'
- 物流咨询: '物流', 'FMS', '供应链'
- 库存管理: '库存', '仓储'
- 自动化: '自动化', 'AI', '人工智能'
- 帮助: '帮助', '功能'

💰 完全免费方案，无任何费用

--- a/index.html
+++ b/index.html
@@ -271,15 +271,13 @@
             useDemo: true // 设置为false使用真实API，true使用演示模式
         };
         
-        // 启用增强聊天功能
+        // 启用智能聊天功能
         window.USE_ENHANCED_CHAT = true;
-        window.USE_SUPER_ENHANCED_CHAT = true; // 启用超级增强版
+        window.USE_FIXED_SMART_CHAT = true; // 启用修复版智能聊天
     </script>
 
-    <!-- 增强版免费聊天机器人 -->
-    <script src="enhanced-free-chatbot.js"></script>
-    <!-- 超级增强版聊天机器人 -->
-    <script src="super-enhanced-chatbot.js"></script>
+    <!-- 修复版智能聊天机器人 -->
+    <script src="fixed-smart-chatbot.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
