🧠 部署真正智能的免费聊天机器人
✨ 全新智能功能:
- 🎯 高精度模式匹配和语言检测
- 🧠 深度FMS物流专业知识库
- 💬 完美的中英文双语支持
- 📊 智能回复评分和选择系统
- 🔍 上下文感知和对话记忆

📚 专业知识覆盖:
- FMS物流核心概念和最佳实践
- 智能库存管理和优化策略
- AI和自动化在物流中的应用
- 供应链数字化转型指导

🎨 用户体验优化:
- 自然的对话流程
- 个性化回复生成
- 详细的专业建议
- 实用的解决方案

💰 完全免费方案:
- 零成本运营
- 无使用限制
- 完全自主控制
- 接近Amazon Q Business的智能水平

🚫 放弃不可行方案:
- ask.qbusiness.aws.dev 访问受限且违法
- 技术和法律风险过高
- 选择合法合规的免费替代方案

--- a/index.html
+++ b/index.html
@@ -271,13 +271,12 @@
             useDemo: true // 设置为false使用真实API，true使用演示模式
         };
         
-        // 启用智能聊天功能
-        window.USE_ENHANCED_CHAT = true;
-        window.USE_FIXED_SMART_CHAT = true; // 启用修复版智能聊天
+        // 启用真正智能的聊天功能
+        window.USE_TRULY_SMART_CHAT = true;
     </script>
 
-    <!-- 修复版智能聊天机器人 -->
-    <script src="fixed-smart-chatbot.js"></script>
+    <!-- 真正智能的聊天机器人 -->
+    <script src="truly-smart-chatbot.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
