🏢 添加Amazon员工专用Amazon Q Business集成
✨ Amazon员工专用功能:
- 🔐 自动检测Amazon SSO权限
- 🌐 支持Amazon内部网络访问
- 🚀 直接集成ask.qbusiness.aws.dev
- 🏢 员工模式指示器
- 🔄 智能回退机制

🔧 技术特性:
- 自动权限验证
- 内部网络连接检测
- SSO状态检查
- 窗口通信设置
- 员工模式UI指示器

🛡️ 合规性保证:
- 完全合法的员工访问
- 遵循Amazon内部政策
- 无需破解或绕过安全措施
- 使用官方认证流程

🔄 备用方案:
- 如果无法访问内部服务
- 自动回退到免费智能聊天机器人
- 确保功能始终可用

📋 使用要求:
- Amazon员工身份
- 连接Amazon VPN
- 完成Amazon SSO登录
- 有权限访问ask.qbusiness.aws.dev

--- a/index.html
+++ b/index.html
@@ -271,11 +271,14 @@
             useDemo: true // 设置为false使用真实API，true使用演示模式
         };
         
-        // 启用真正智能的聊天功能
-        window.USE_TRULY_SMART_CHAT = true;
+        // 启用Amazon员工模式检测
+        window.AMAZON_EMPLOYEE_MODE = true;
+        window.USE_TRULY_SMART_CHAT = true; // 备用方案
     </script>
 
-    <!-- 真正智能的聊天机器人 -->
+    <!-- Amazon员工专用集成 -->
+    <script src="amazon-employee-chatbot.js"></script>
+    <!-- 真正智能的聊天机器人（备用） -->
     <script src="truly-smart-chatbot.js"></script>
     <script src="script.js"></script>
 </body>
