🔧 部署调试版Amazon员工模式
🐛 问题诊断:
- 原版本可能有JavaScript加载或执行问题
- 创建简化的调试版本确保功能正常

✨ 调试版特性:
- 强制显示员工模式指示器
- 强制替换聊天按钮样式和功能
- 详细的控制台调试日志
- 多重初始化时机保证
- 全局调试函数

🔧 调试功能:
- debugEmployeeMode() 重新初始化
- forceShowIndicator() 强制显示指示器
- forceReplaceButton() 强制替换按钮
- 详细的执行过程日志

🎯 预期效果:
- 右上角强制显示橙色员工模式指示器
- 聊天按钮强制变为橙色Amazon Q Business
- 点击直接打开ask.qbusiness.aws.dev
- 控制台显示详细调试信息

⚠️ 使用说明:
- 强制刷新页面 (Ctrl+F5)
- 打开浏览器控制台查看日志
- 如有问题可手动运行调试函数

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
         window.USE_TRULY_SMART_CHAT = true; // 备用方案
     </script>
 
-    <!-- Amazon员工专用集成 -->
-    <script src="amazon-employee-chatbot.js"></script>
+    <!-- 调试版Amazon员工专用集成 -->
+    <script src="debug-employee-mode.js"></script>
     <!-- 真正智能的聊天机器人（备用） -->
     <script src="truly-smart-chatbot.js"></script>
     <script src="script.js"></script>
