📄 部署页面调试版本 - 无需控制台
🎯 解决控制台打开问题:
- 创建页面内调试面板
- 直接在页面上显示所有调试信息
- 无需打开浏览器控制台

✨ 页面调试功能:
- 右上角自动显示调试面板
- 实时显示初始化过程
- 绿色终端风格界面
- 强制初始化按钮
- 关闭面板按钮

🔧 调试信息包括:
- 页面基本信息 (URL、标题、加载状态)
- 员工模式指示器显示状态
- 聊天按钮查找和替换过程
- 所有操作的成功/失败状态
- 实时时间戳

🎯 预期效果:
- 页面右上角显示黑色调试面板
- 橙色员工模式指示器
- 聊天按钮变为橙色Amazon Q Business
- 所有过程可视化显示

⚠️ 使用说明:
- 强制刷新页面 (Ctrl+F5)
- 调试面板会自动显示
- 可点击'强制初始化'按钮重试
- 不需要打开浏览器控制台

--- a/index.html
+++ b/index.html
@@ -276,10 +276,8 @@
         window.USE_TRULY_SMART_CHAT = true; // 备用方案
     </script>
 
-    <!-- 调试版Amazon员工专用集成 -->
-    <script src="debug-employee-mode.js"></script>
-    <!-- 真正智能的聊天机器人（备用） -->
-    <script src="truly-smart-chatbot.js"></script>
+    <!-- 页面调试版Amazon员工模式 -->
+    <script src="page-debug-mode.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
